Added agents template

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ name = "pypi"
 
 "60accb6" = {path = "openai_gym", editable = true}
 "6fc8e67" = {path = "gym-gomoku", editable = true}
+ipython = "*"
 
 
 [packages]
